# lito1

./: .gitignore  Auto_script_for_Jellyfin_anime_v2.0_optimized_.py  README.md  config.toml.example  lito1.bat  lito1.py  pyproject.toml
anime_pipeline/: __init__.py  cli.py  core.py
lito1/: __init__.py  config.py  core.py  encode.py  jellyfin.py  nyaa.py  qbit.py  watch.py
