[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anime-pipeline-jellyfin"
version = "2.0.0"
description = "Nyaa -> qBittorrent -> HandBrake/FFmpeg anime pipeline with Jellyfin integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "qbittorrent-api>=2024.0.0",
  "anitopy>=2.1.1",
  "guessit>=3.8.0",
  "tomli>=2.0.1; python_version < '3.11'"
]

[project.scripts]
anime-pipeline = "anime_pipeline.cli:main"

[tool.setuptools]
packages = ["anime_pipeline"]
